Add directory-specific option.	Fix need to restart.  Clean up code a bit.  Add idle time out option.